syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.grpc";


service Proto {
  rpc loginDoctor (loginRequest) returns (loginResponse) {}
}

message loginRequest {
  string email = 1;
  string password = 2;
}

message loginResponse {
  string email = 1;
  string password = 2;
}